[gd_scene load_steps=8 format=3 uid="uid://dpfmqjk33nt7r"]

[ext_resource type="Script" path="res://Lib/food_unit.gd" id="1_cdnj7"]
[ext_resource type="Texture2D" uid="uid://c8mhygw763et8" path="res://Res/Bar.png" id="1_wqo4v"]
[ext_resource type="Texture2D" uid="uid://c4s5hkasqpyc6" path="res://Res/del.png" id="3_hygka"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eg2xy"]
atlas = ExtResource("1_wqo4v")
region = Rect2(0, 32, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_duw3e"]
atlas = ExtResource("1_wqo4v")
region = Rect2(56, 48, 40, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v5sf"]
atlas = ExtResource("1_wqo4v")
region = Rect2(56, 0, 40, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkpli"]
atlas = ExtResource("1_wqo4v")
region = Rect2(56, 32, 40, 16)

[node name="Food" type="HBoxContainer"]
custom_minimum_size = Vector2(600, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
alignment = 1
script = ExtResource("1_cdnj7")

[node name="Time" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "HH:MM:SS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Name" type="LineEdit" parent="Main"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Name"
alignment = 1

[node name="Mass" type="HBoxContainer" parent="Main"]
layout_mode = 2

[node name="Label" type="Label" parent="Main/Mass"]
layout_mode = 2
text = "Mass"

[node name="Mass" type="SpinBox" parent="Main/Mass"]
layout_mode = 2
step = 0.1
allow_greater = true
alignment = 1
suffix = "g"

[node name="carbohydrate" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="carbohydrate" type="TextureProgressBar" parent="carbohydrate"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 100.0
fill_mode = 1
texture_under = SubResource("AtlasTexture_eg2xy")
texture_progress = SubResource("AtlasTexture_duw3e")
texture_progress_offset = Vector2(8, 0)

[node name="per" type="SpinBox" parent="carbohydrate"]
layout_mode = 2
step = 0.1
alignment = 1
suffix = "%"

[node name="mass" type="SpinBox" parent="carbohydrate"]
layout_mode = 2
step = 0.1
alignment = 1
editable = false
suffix = "g"

[node name="protein" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="protein" type="TextureProgressBar" parent="protein"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 100.0
fill_mode = 1
texture_under = SubResource("AtlasTexture_eg2xy")
texture_progress = SubResource("AtlasTexture_1v5sf")
texture_progress_offset = Vector2(8, 0)

[node name="per" type="SpinBox" parent="protein"]
layout_mode = 2
step = 0.1
alignment = 1
suffix = "%"

[node name="mass" type="SpinBox" parent="protein"]
layout_mode = 2
step = 0.1
alignment = 1
editable = false
suffix = "g"

[node name="fat" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="fat" type="TextureProgressBar" parent="fat"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 100.0
fill_mode = 1
texture_under = SubResource("AtlasTexture_eg2xy")
texture_progress = SubResource("AtlasTexture_bkpli")
texture_progress_offset = Vector2(8, 0)

[node name="per" type="SpinBox" parent="fat"]
layout_mode = 2
step = 0.1
alignment = 1
suffix = "%"

[node name="mass" type="SpinBox" parent="fat"]
layout_mode = 2
step = 0.1
alignment = 1
editable = false
suffix = "g"

[node name="Del" type="TextureButton" parent="."]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_hygka")

[connection signal="text_changed" from="Main/Name" to="." method="_on_name_text_changed"]
[connection signal="value_changed" from="Main/Mass/Mass" to="." method="_on_mass_value_changed"]
[connection signal="value_changed" from="carbohydrate/per" to="." method="_on_carbohydrate_value_changed"]
[connection signal="value_changed" from="protein/per" to="." method="_on_protein_value_changed"]
[connection signal="value_changed" from="fat/per" to="." method="_on_fat_value_changed"]
[connection signal="pressed" from="Del" to="." method="_on_del_pressed"]
